--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -44,10 +44,10 @@
             android:id="@+id/email_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:inputType="phone"
 
 
-            android:maxLength="15"
+            android:maxLength="10"
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
 
@@ -76,7 +76,7 @@
             android:inputType="textEmailAddress"
 
 
-            android:maxLength="15"
+            android:maxLength="30"
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
 
